[package]
name = "sturgeon"
version = "0.1.0"
authors = ["Xianzheng Zhou <xianzheng.zhou@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
simple_logger = "1.4.0"
clap = "2.33.0"
hyper = "0.13"
futures-util = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["rt-core", "macros", "time"] }
opcua-client = "0.7.0"
